# open-earable-2-exg

./: .gitignore  CONTRIBUTING.md  README.md  VERSION  main.py  prj.conf  prj_fota.conf  pyproject.toml
.github/workflows/: build_firmware.yaml  prerelease_open_pr_builds.yaml  release_firmware.yaml
include/: openearable_common.h
src/Battery/: BQ25120a.cpp  BQ25120a.h  BQ27220.cpp  BQ27220.h  Kconfig  PowerManager.cpp  PowerManager.h
src/ParseInfo/: DefaultSensors.h  README  SensorScheme.cpp  SensorScheme.h
src/SD_Card/SDLogger/: SDLogger.cpp  (+1 more)
src/SensorManager/: CMakeLists.txt  ExG.cpp  ExG.h  Microphone.cpp  PPGSensor.cpp  PPGSensor.h  PPG_left_I2C3.cpp  PPG_left_I2C3.h  PPG_right_I2C2.cpp  PPG_right_I2C2.h  SensorManager.cpp  SensorManager.h  TempSensor.cpp  TempSensor.h  Temp_left_I2C3.cpp  Temp_left_I2C3.h  Temp_right_I2C2.cpp  Temp_right_I2C2.h
src/SensorManager/BMX160/: DFRobot_BMX160.cpp  DFRobot_BMX160.h
src/audio/: audio_datapath.c  audio_system.c  audio_system.h  streamctrl.c
src/drivers/: ADAU1860.cpp  CMakeLists.txt  Kconfig
src/modules/: CMakeLists.txt  hw_codec.h  hw_codec_adau1860.cpp  hw_codec_stub.c
src/time_sync/: CMakeLists.txt  time_sync.c  time_sync.h  usb_time_sync.c  usb_time_sync.h
src/utils/: StateIndicator.cpp  StateIndicator.h
tools/exg_live_ble/: record_and_realtime_plot_BLE.py
tools/flash/: flash_fota.ps1
tools/time_sync/: Info.plist  OpenEarableTools.spec  OpenEarableTools_windows.spec  build_exe.py  oe_parser.py  requirements.txt  rth_no_plistlib.py  test_ble_scan.py  time_sync.py
unicast_server/: main.cpp
(+5 files in other folders)
